InputHandler Unit Tests
* Testing request types
** GetAllConversationDataRequest
** GetConversationsRequest
** UpdateHistoryRequests
** UpdateHistoryRequests
** DeleteFriendRequests
** DeleteFriendRequests
** LogoutRequests
** UpdateHistoryRequests
** SearchUsersRequests
** UserNameAvailableRequests
* Made AddParticipantRequest tests verify users gets the conversation id
* Made some utility functions for testing
* Removed print statements
* Made sure that responses of requests are tested
* Deleted unused libraries
* Removed build.bat file
* Removed external libraries, run and build shell scripts
* Installed pitest plugin
* Improved tests with the help of pitest